--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ display: block;
     color: #fff;
     font-size: 1rem;
 }
-#banner-text a{
+.bot{
     background-color: #e58e26;
     padding: 10px 50px;
     color: #fff;
@@ -96,4 +96,78 @@ display: block;
 #banner_3 div {
     text-align: left;
 
+}
+.banner-meio-1 {
+    text-align: center;
+}
+.banner-meio-2{
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    text-align: center;
+}
+.banner-meio-2 div{
+    padding-top: 30px;
+    width: 33%;
+}
+#texto-secao-meio {
+    text-align: left;
+    font-size: 2em;
+}
+#texto-secao-meio-2{
+    text-align: right;
+    font-size: 2em;
+}
+#container-final{
+    margin-top: 20px;
+    width: 100%;
+}
+#container-final div{
+    width: 30%;
+}
+#container-final {
+    display: flex;
+    justify-content: space-evenly;
+}
+.container-final-div h1 {
+    display: inline-block;
+}
+#div-fotos-secao-doutores{
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+}
+
+#secao-doutores{
+    background-color: #74b9ff;
+    text-align: center;
+    margin: 0% auto;
+    padding: 10px 0px;
+}
+#div-fotos-secao-doutores div{
+    background-color: #fff;
+}
+#rodape-final div{
+    width: 20%;
+}
+#rodape-final{
+    display:flex;
+    justify-content: center;
+    gap: 70px;
+    margin-top: 30px;
+}
+.titulo-div-footer{
+    border-bottom: solid 3px #0abde3;
+    font-weight: bold;
+}
+#lista-final{
+    margin-top: 30px;
+    font-weight: bold;
+}
+.pdados{
+    color: #fff;
+    background-color: #22a6b3;
+    width: 300px;
+    text-align: center;
+    padding: 5px;
 }
