--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ header {
 }
 
 #banner {
-  background-image: url('/assets/images/banner2.jpg');
+  background-image: url('/desenvolvimento-web/assets/images/banner2.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
